--- a/youtube/src/index.css
+++ b/youtube/src/index.css
@@ -47,6 +47,8 @@ body{
       justify-content: space-between;
       padding: 0px 10px;
       margin-top: -4px;
+      border-bottom-left-radius: 5px;
+      border-bottom-right-radius: 5px;
 
       div{
         display: flex;
@@ -103,8 +105,8 @@ body{
 
   video {
     width: 100%;
-    border-top-left-radius: 3px;
-    border-top-right-radius: 3px;
+    border-top-left-radius: 5px;
+    border-top-right-radius: 5px;
   }
 
   #time{
