--- a/task/src/index.css
+++ b/task/src/index.css
@@ -15,6 +15,10 @@
 
 }
 
+#output{
+    height: 20px;
+}
+
 #outer, #outer2{
     width: 40%;
     display: flex;  
@@ -22,10 +26,21 @@
     gap: 10px;
     align-items: center;
     box-shadow: 0 0 10px rgba(0,0, 0, 0.3);
+    height: 450px;
 }
+
+
 
 #inner{
     padding: 50px;
+    display: flex; 
+    gap: 10px;
+    width: 100%;
+    justify-content: space-evenly;
+}
+
+#inner1{
+    padding: 20px 50px 50px;
     display: flex; 
     gap: 10px;
     width: 100%;
